[package]
name = "kanidm-profiles"
description = "A client config profiles switcher for Kanidm, handy for when you are working between dev and prod environments."
version = "0.1.3"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
homepage = "https://github.com/yaleman/kanidm-profiles"
repository = "https://github.com/yaleman/kanidm-profiles"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
kanidm_client = "1.7.4"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
toml = "0.9.8"

# [dependencies.kanidm_client]
# # path = "../kanidm/libs/client"
# git = "https://github.com/yaleman/kanidm"
# branch = "kanidm-client-pub"
