[package]
name = "kanidm-profiles"
description = "A client config profiles switcher for Kanidm, handy for when you are working between dev and prod environments."
version = "0.1.4"
edition = "2021"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
homepage = "https://github.com/yaleman/kanidm-profiles"
repository = "https://github.com/yaleman/kanidm-profiles"
license = "MIT"

[profile.release]
lto = "fat"
codegen-units = 1


[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
kanidm_client = "1.8.6"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
toml = "1.0.1"

# [dependencies.kanidm_client]
# # path = "../kanidm/libs/client"
# git = "https://github.com/yaleman/kanidm"
# branch = "kanidm-client-pub"
